[package]
categories = ["algorithms", "development-tools", "mathematics", "rust-patterns", "science"]
description = "Composable facade for RustUse utility crates"
documentation = "https://docs.rs/rustuse"
edition = "2024"
homepage = "https://rustuse.org"
include = ["/Cargo.toml", "/LICENSE-APACHE", "/LICENSE-MIT", "/README.md", "/src/**"]
keywords = ["facade", "primitives", "rustuse", "toolkit", "utilities"]
license = "MIT OR Apache-2.0"
name = "rustuse"
publish = true
readme = "README.md"
repository = "https://github.com/RustUse/rustuse"
rust-version = "1.95.0"
version = "0.2.0"

[package.metadata.docs.rs]
all-features = true

[features]
default = []

full = [
    "accessibility",
    "acoustics",
    "ai",
    "api",
    "archive",
    "astronomy",
    "bioinformatics",
    "biology",
    "calendar",
    "chemistry",
    "cli",
    "color",
    "config",
    "constants",
    "control",
    "data",
    "database",
    "diagnostic",
    "docker",
    "ecology",
    "electronics",
    "email",
    "encoding",
    "event",
    "finance",
    "fs",
    "geography",
    "geology",
    "geometry",
    "git",
    "go",
    "graph",
    "id",
    "js",
    "locale",
    "materials",
    "math",
    "measure",
    "media",
    "meteorology",
    "ml",
    "music",
    "net",
    "nosql",
    "oci",
    "optics",
    "optimization",
    "os",
    "pattern",
    "php",
    "physics",
    "postgres",
    "presence",
    "python",
    "quant",
    "robotics",
    "rust",
    "rustacean",
    "security",
    "signal",
    "simulation",
    "sql",
    "stats",
    "test",
    "text",
    "time",
    "typography",
    "ui",
    "units",
    "validate",
    "wasm",
    "wave",
    "web",
]

accessibility = ["dep:use-accessibility"]
acoustics = ["dep:use-acoustics"]
ai = ["dep:use-ai"]
api = ["dep:use-api"]
archive = ["dep:use-archive"]
astronomy = ["dep:use-astronomy"]
bioinformatics = ["dep:use-bioinformatics"]
biology = ["dep:use-biology"]
calendar = ["dep:use-calendar"]
chemistry = ["dep:use-chemistry"]
cli = ["dep:use-cli"]
color = ["dep:use-color"]
config = ["dep:use-config"]
constants = ["dep:use-constants"]
control = ["dep:use-control"]
data = ["dep:use-data"]
database = ["dep:use-database"]
diagnostic = ["dep:use-diagnostic"]
docker = ["dep:use-docker"]
ecology = ["dep:use-ecology"]
electronics = ["dep:use-electronics"]
email = ["dep:use-email"]
encoding = ["dep:use-encoding"]
event = ["dep:use-event"]
finance = ["dep:use-finance"]
fs = ["dep:use-fs"]
geography = ["dep:use-geography"]
geology = ["dep:use-geology"]
geometry = ["dep:use-geometry"]
git = ["dep:use-git"]
go = ["dep:use-go"]
graph = ["dep:use-graph"]
id = ["dep:use-id"]
js = ["dep:use-js"]
locale = ["dep:use-locale"]
materials = ["dep:use-materials"]
math = ["dep:use-math"]
measure = ["dep:use-measure"]
media = ["dep:use-media"]
meteorology = ["dep:use-meteorology"]
ml = ["dep:use-ml"]
music = ["dep:use-music"]
net = ["dep:use-net"]
nosql = ["dep:use-nosql"]
oci = ["dep:use-oci"]
optics = ["dep:use-optics"]
optimization = ["dep:use-optimization"]
os = ["dep:use-os"]
pattern = ["dep:use-pattern"]
php = ["dep:use-php"]
physics = ["dep:use-physics"]
postgres = ["dep:use-postgres"]
presence = ["dep:use-presence"]
python = ["dep:use-python"]
quant = ["dep:use-quant"]
robotics = ["dep:use-robotics"]
rust = ["dep:use-rust"]
rustacean = ["dep:use-rustacean"]
security = ["dep:use-security"]
signal = ["dep:use-signal"]
simulation = ["dep:use-simulation"]
sql = ["dep:use-sql"]
stats = ["dep:use-stats"]
test = ["dep:use-test"]
text = ["dep:use-text"]
time = ["dep:use-time"]
typography = ["dep:use-typography"]
ui = ["dep:use-ui"]
units = ["dep:use-units"]
validate = ["dep:use-validate"]
wasm = ["dep:use-wasm"]
wave = ["dep:use-wave"]
web = ["dep:use-web"]

[dependencies]
use-accessibility = { version = "0.0.1", optional = true }
use-acoustics = { version = "0.1.0", optional = true }
use-ai = { version = "0.0.1", optional = true }
use-api = { version = "0.0.1", optional = true }
use-archive = { version = "0.1.0", optional = true }
use-astronomy = { version = "0.1.0", optional = true }
use-bioinformatics = { version = "0.1.0", optional = true }
use-biology = { version = "0.1.0", optional = true }
use-calendar = { version = "0.0.1", optional = true }
use-chemistry = { version = "0.1.0", optional = true }
use-cli = { version = "0.0.1", optional = true }
use-color = { version = "0.1.0", optional = true }
use-config = { version = "0.1.0", optional = true }
use-constants = { version = "0.1.0", optional = true }
use-control = { version = "0.0.1", optional = true }
use-data = { version = "0.1.0", optional = true }
use-database = { version = "0.1.0", optional = true }
use-diagnostic = { version = "0.0.1", optional = true }
use-docker = { version = "0.0.1", optional = true }
use-ecology = { version = "0.1.0", optional = true }
use-electronics = { version = "0.0.1", optional = true }
use-email = { version = "0.1.0", optional = true }
use-encoding = { version = "0.1.0", optional = true }
use-event = { version = "0.1.0", optional = true }
use-finance = { version = "0.1.1", optional = true }
use-fs = { version = "0.0.1", optional = true }
use-geography = { version = "0.1.0", optional = true }
use-geology = { version = "0.1.0", optional = true }
use-geometry = { version = "0.2.1", optional = true }
use-git = { version = "0.0.1", optional = true }
use-go = { version = "0.0.1", optional = true }
use-graph = { version = "0.0.1", optional = true }
use-id = { version = "0.0.1", optional = true }
use-js = { version = "0.0.1", optional = true }
use-locale = { version = "0.1.0", optional = true }
use-materials = { version = "0.0.2", optional = true }
use-math = { version = "0.0.7", optional = true }
use-measure = { version = "0.1.0", optional = true }
use-media = { version = "0.0.1", optional = true }
use-meteorology = { version = "0.1.0", optional = true }
use-ml = { version = "0.0.1", optional = true }
use-music = { version = "0.0.1", optional = true }
use-net = { version = "0.1.0", optional = true }
use-nosql = { version = "0.1.0", optional = true }
use-oci = { version = "0.0.1", optional = true }
use-optics = { version = "0.1.0", optional = true }
use-optimization = { version = "0.0.1", optional = true }
use-os = { version = "0.1.0", optional = true }
use-pattern = { version = "0.1.0", optional = true }
use-php = { version = "0.0.1", optional = true }
use-physics = { version = "0.0.2", optional = true }
use-postgres = { version = "0.1.0", optional = true }
use-presence = { version = "0.0.1", optional = true }
use-python = { version = "0.0.1", optional = true }
use-quant = { version = "0.0.1", optional = true }
use-robotics = { version = "0.0.1", optional = true }
use-rust = { version = "0.1.0", optional = true }
use-rustacean = { version = "0.1.0", optional = true }
use-security = { version = "0.0.1", optional = true }
use-signal = { version = "0.0.1", optional = true }
use-simulation = { version = "0.0.1", optional = true }
use-sql = { version = "0.1.0", optional = true }
use-stats = { version = "0.0.1", optional = true }
use-test = { version = "0.1.0", optional = true }
use-text = { version = "0.2.0", optional = true }
use-time = { version = "0.1.0", optional = true }
use-typography = { version = "0.0.1", optional = true }
use-ui = { version = "0.1.0", optional = true }
use-units = { version = "0.1.0", optional = true }
use-validate = { version = "0.0.1", optional = true }
use-wasm = { version = "0.0.1", optional = true }
use-wave = { version = "0.1.0", optional = true }
use-web = { version = "0.0.1", optional = true }
